--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,14 +1,12 @@
-@import "./reset.scss";
-@import "./variables/globals.scss";
-@import "./theme/dark.scss";
-@import "./theme/normal.scss";
+@import "reset";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
 
 .app {
     font: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 }
 
