--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,4 +1,4 @@
-.navbar {
+.Navbar {
     width: 100%;
     height: var(--navbar-height);
     background: var(--inverted-bg-color);
@@ -8,7 +8,9 @@
 }
 
 .links {
-    display: flex;
     margin-left: auto;
-    gap: 20px;
+}
+
+.mainLink {
+    margin-right: 15px;
 }
